# RP-Utilities

./: .gitignore  Action.py  Character.py  Default_Caracter.py  Developer.py  Roll.py  Template.py  bot.py  bot_token.py  help.py  macros.py  pyproject.toml  rpu.db  rpu_database.py
RP Utilities/: A fazeres.txt  bot.py  bot_token.py  rpu_database.py
RP Utilities/cogs/: Action.py  Admin.py  Character.py  Developer.py  Ping.py  Roll.py  Template.py
cogs/: ActionCog.py  Admin.py  CharactersCog.py  MacroCog.py  MathCog.py  Ping.py  Roll.py  RollCog.py  SelectionCog.py  Template.py
rp_utilities/: __main__.py  bot.py  bot_token.py  help.py  macros.py  milascenous.py  miscellaneous.py  rpu_database.py
rp_utilities/cogs/: ActionCog.py  AdminCog.py  CharactersCog.py  CommandErrorHandler.py  DeveloperCog.py  HelpCog.py  MacroCog.py  MathCog.py  PingCog.py  ProfileCog.py  RollCog.py  SelectionCog.py  TemplateCog.py
